Finalize v2.0.0 updates across modules and docs