@@ -77,18 +77,15 @@ All documentation now lives under `docs/`.
 Release assets are published on GitHub Releases:
 https://github.com/ArberGashi/charts/releases
 
-- Core JAR: `arbercharts-core-1.7.0-LTS.jar`
 - Starter (Core + Swing + Server): `arbercharts-starter-1.7.0-LTS.jar`
 - Compose Bridge: `arbercharts-compose-bridge-1.7.0-LTS.jar`
 - Qt Bridge (native, per‑OS ZIP): `arbercharts-qt-bridge-<os>-1.7.0-LTS.zip`
-- Swift Bridge (native, per‑OS ZIP): `arbercharts-swift-bridge-<os>-1.7.0-LTS.zip`
+- Swift Bridge (native, macOS arm64 ZIP, includes .xcframework + core dylib): `arbercharts-swift-bridge-macos-1.7.0-LTS.zip`
 - Installers: macOS (.dmg), Windows (.msi), Linux (.deb)
 
-## Quick Start (Demo)
+## Demo
 
-```bash
-java --enable-native-access=ALL-UNNAMED -jar arbercharts-demo-1.7.0-LTS.jar
-```
+Demo showcase builds are available on request.
 
 ## System Requirements
 
